# FastLoom

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.claude/rules/: code-discipline.md  code-style.md  configs-and-singletons.md  lint-typecheck.md  naming-and-types.md  optional-imports.md  pydantic-validation.md  typing.md
.github/actions/setup-env/: action.yaml
.github/workflows/: ci.yaml
ci_scripts/: build_poetry_dev.sh  build_system.sh
core_bluprint/: monitoring.py
core_bluprint/auth/: __init__.py  depends.py  protocols.py  schemas.py
core_bluprint/auth/introspect/: depends.py
core_bluprint/cache/: base.py  lifehooks.py
core_bluprint/db/: healthcheck.py  lifehooks.py  schemas.py  signals.py  transactions.py
core_bluprint/file/: models.py  schema.py  signals.py  utils.py
core_bluprint/healthcheck/: handler.py
core_bluprint/i18n/: base.py  handler.py
core_bluprint/launcher/: main.py  schemas.py  settings.py  utils.py
core_bluprint/observability/: settings.py
core_bluprint/settings/: base.py
core_bluprint/signals/: depends.py  healthcheck.py  lifehooks.py
core_bluprint/tenant/: depends.py  handler.py  schemas.py  settings.py  utils.py
core_zenoa/: crypto.py  date.py  file.py  monitoring.py  tests.py  types.py  user.py  utils.py
core_zenoa/auth/: depends.py  protocols.py  schemas.py
core_zenoa/auth/introspect/: depends.py
core_zenoa/db/: healthcheck.py  lifehooks.py  schemas.py  signals.py  transactions.py
core_zenoa/healthcheck/: handler.py
core_zenoa/observability/: settings.py
core_zenoa/redis/: depends.py
core_zenoa/settings/: base.py
core_zenoa/signals/: depends.py  healthcheck.py  lifehooks.py  middlewares.py  settings.py
core_zenoa/tenant/: depends.py  protocols.py  settings.py
docker/: poetry.dev.Dockerfile  system.Dockerfile
docs/: auth.md  cache.md  conventions.md  db.md  file.md  healthcheck.md  i18n.md  internal-testing.md  launcher.md  mcp.md  observability.md  quickstart.md  settings.md  signals.md  tenant.md  test.md
docs/adr/: 01-kafka-non-keyed-retry-backoff.md  01-kafka-retry-backoff.md
docs/superpowers/specs/: 2026-07-13-selfsustaining-contextvar-override-design.md
fastloom/: extras.py  meta.py  monitoring.py  types.py  utils.py
fastloom/auth/: depends.py  schemas.py  settings.py
fastloom/cache/: base.py  gate.py  http.py  lifehooks.py
fastloom/db/: monitoring.py  signals.py
fastloom/file/: schema.py  signals.py
fastloom/healthcheck/: handler.py
fastloom/launcher/: depends.py  main.py  schemas.py  settings.py  utils.py
fastloom/logging/: lifehooks.py  settings.py  utils.py
fastloom/mcp/: auth.py  lifehooks.py  settings.py
fastloom/observability/: decorators.py  settings.py
fastloom/settings/: base.py  general.py  utils.py
fastloom/signals/: depends.py  kafka_depends.py  kafka_healthcheck.py  lifehooks.py  middlewares.py  settings.py  utils.py
fastloom/signals/kafka/: depends.py  healthcheck.py  schemas.py  settings.py
fastloom/signals/rabbit/: depends.py  healthcheck.py
fastloom/tenant/: depends.py  handler.py  protocols.py  settings.py  utils.py
fastloom/test/: constants.py  container.py  types.py  utils.py
fastloom/test/fixtures/: app.py  auth.py  docker.py  settings.py
plugins/fastloom-sdk/.claude-plugin/: plugin.json
plugins/fastloom-sdk/skills/add-fastloom-route/: SKILL.md
plugins/fastloom-sdk/skills/add-kafka-subscriber/: SKILL.md
plugins/fastloom-sdk/skills/add-rabbit-subscriber/: SKILL.md
plugins/fastloom-sdk/skills/audit-fastloom-settings/: SKILL.md
plugins/fastloom-sdk/skills/fastloom-reference/: SKILL.md
plugins/fastloom-sdk/skills/scaffold-fastloom-service/: SKILL.md
scripts/: check_plugin_version.py
tests/: conftest.py  test_backoff.py  test_context_source.py  test_hybrid_signals.py  test_kafka_otel.py  test_kafka_settings.py  test_kafka_subscriber.py  test_launcher_depends.py  test_launcher_main.py  test_meta.py  test_monitoring.py  test_optional_broker_import.py  test_optional_rabbit_import.py  test_rabbit_backoff.py  test_signals_utils.py  test_tenant_handler.py  test_types.py
tests/cache/: test_http.py  test_key_prefixes.py  test_lifehooks.py
tests/kafka/: conftest.py  test_backoff.py  test_body_decode_fallback.py  test_otel.py  test_pause_resume_backoff.py  test_settings.py  test_subscriber.py  test_tombstone.py
tests/mcp/: test_lifehooks.py
tests/rabbit/: test_backoff.py
