[project]
name = "core-bluprint"
version = "0.2.8"
description = "Core package"
authors = []
readme = "README.md"

[[tool.poetry.source]]
name = "nexus-registry"
url = "https://nexus.bluprint.ir/repository/group-package-registry/simple/"
priority = "primary"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true


follow_imports = 'normal'
[[tool.mypy.overrides]]
module = 'redis.asyncio.client'
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = 'redis.asyncio'
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = 'redis'
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = 'dateutil.relativedelta'
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = 'requests'
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = 'aiofiles'
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jdatetime = "^4.1.1"
beanie = "2.0.0"
python-jose = "^3.3.0"
pydantic = { version = "^2.11", extras = ["email"] }
pydantic-settings = "^2.1.0"
uvicorn = "^0.35.0"
orjson = "3.10.14"
pyyaml = "^6.0.2"

fastapi = { version = "^0", optional = true }
python-multipart = { version = "*", optional = true }
faststream = { version = "^0.5.28", extras = [
    "rabbit",
    "otel",
], optional = true }
celery = { version = "^5.3.6", optional = true }
httpx = { version = "^0.28.0", optional = true }
requests = { version = "^2.31.0", optional = true }
redis = { version = "^5.0.1", optional = true }
openai = { version = "^1.51.2", optional = true }

# OTEL
logfire = { version = "^4.0.0", extras = ["system-metrics"] }
sentry-sdk = { extras = ["fastapi"], version = "^2.0.0" }
opentelemetry-distro = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-instrumentation-logging = { version = "*" }
opentelemetry-instrumentation-urllib = { version = "*" }
opentelemetry-instrumentation-system-metrics = { version = "*" }
opentelemetry-instrumentation-urllib3 = { version = "*" }
opentelemetry-instrumentation-asgi = { version = "*", optional = true }
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-aio-pika = { version = "*", optional = true }
opentelemetry-instrumentation-celery = { version = "*", optional = true }
opentelemetry-instrumentation-httpx = { version = "*", optional = true }
opentelemetry-instrumentation-requests = { version = "*", optional = true }
opentelemetry-instrumentation-redis = { version = "*", optional = true }
opentelemetry-instrumentation-pymongo = { version = "*", optional = true }
babel = "^2.17.0"
jinja2 = "^3.1.6"

[tool.poetry.extras]
FastAPI = [
    "fastapi",
    "python-multipart",
    "uvicorn",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-fastapi",
]
Rabbit = [
    "fastapi",
    "uvicorn",
    "faststream",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-aio-pika",
]
Celery = ["celery", "opentelemetry-instrumentation-celery"]
HTTPx = ["httpx", "opentelemetry-instrumentation-httpx"]
Requests = ["requests", "opentelemetry-instrumentation-requests"]
Redis = ["redis", "opentelemetry-instrumentation-redis"]
Mongodb = ["beanie", "opentelemetry-instrumentation-pymongo"]
OpenAI = ["openai"]

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.21.1"
deepdiff = "^6.7.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
freezegun = "^1.2.2"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.5"
mypy = "^1.17.0"
ipykernel = "^6.30.0"
types-pyyaml = "^6.0.12.20240917"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
