[project]
name = "fastloom"
version = "0.4.51"
description = "Core package"
authors = []
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.13", "Typing :: Typed"]
urls = { "Repository" = "https://github.com/aradng/FastLoom" }
requires-python = ">=3.12,<3.14"
dependencies = [
    "jdatetime>=4.1.1,<6.0.0",
    "python-jose>=3.5.0,<4.0.0",
    "pydantic[email]>=2.12,<3.0.0",
    "uvicorn>=0.35.0,<0.52.0",
    "orjson>=3.10.14,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "logfire[system-metrics,asgi,fastapi,celery,httpx,requests,redis,pymongo,openai]>=4.0.0,<5.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "babel>=2.17.0,<3.0.0",
    "jinja2>=3.1.6,<4.0.0",
]

[project.optional-dependencies]
rabbit = [
    "uvicorn",
    "faststream[otel,rabbit]",
    "opentelemetry-instrumentation-aio-pika",
]
kafka = [
    "uvicorn",
    "faststream[otel,confluent]",
    "opentelemetry-instrumentation-confluent-kafka>=0.62b1,<0.64b0",
]
redis = [
    "faststream[redis]",
    "redis-om>=1.0,<2.0",
    "fastapi-redis-sdk[otel]>=0.7.0,<0.8.0",
]
fastapi = ["fastapi>=0,<1", "uvicorn", "python-multipart"]

mongo = ["beanie>=2.0.0,<3.0.0"]
celery = ["celery>=5.5.3,<6.0.0"]
httpx = ["httpx>=0.28.0,<0.29.0"]
requests = ["requests>=2.32.0,<3.0.0"]
openai = ["openai>=1,<3"]
mcp = ["fastmcp (>=3.2.1,<4.0.0)"]
dev = [
    "pre-commit>=4.5,<5.0.0",
    "ruff>=0.15,<0.16.0",
    "mypy>=1.19,<3.0.0",
    "ipykernel>=6.30.0,<8.0.0",
]
test = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "deepdiff (>=9.0.0,<10.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "pytest-lazy-fixtures (>=1.4.0,<2.0.0)",
    "httpx2 (>=2.5.0,<3.0.0)",
]

[tool.mypy]
plugins = ["pydantic.mypy", "returns.contrib.mypy.returns_plugin"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest-asyncio",
    "deepdiff",
    "pytest",
    "pytest-mock",
    "freezegun",
    "pytest-cov",
    "pytest-xdist",
]


dev = [
    { include-group = "test" },
    "types-pyyaml",
    "types-requests",
    "types-redis",
    "types-python-jose",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[project.scripts]
launch = "fastloom.launcher.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
